--- a/SDL_UpperBlitScaled.mediawiki
+++ b/SDL_UpperBlitScaled.mediawiki
@@ -30,7 +30,7 @@ int SDL_UpperBlitScaled(SDL_Surface*    src,
 |}
 
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
