--- a/SDL_UpdateWindowSurfaceRects.mediawiki
+++ b/SDL_UpdateWindowSurfaceRects.mediawiki
@@ -25,7 +25,7 @@ int SDL_UpdateWindowSurfaceRects(SDL_Window* window,
 |}
 
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
