--- a/SDL_SetWindowBrightness.mediawiki
+++ b/SDL_SetWindowBrightness.mediawiki
@@ -21,7 +21,7 @@ int SDL_SetWindowBrightness(SDL_Window* window,
 |}
 
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
