--- a/SDL_SetThreadPriority.mediawiki
+++ b/SDL_SetThreadPriority.mediawiki
@@ -17,7 +17,7 @@ int SDL_SetThreadPriority(SDL_ThreadPriority priority)
 |}
 
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
