--- a/SDL_SetPixelFormatPalette.mediawiki
+++ b/SDL_SetPixelFormatPalette.mediawiki
@@ -21,7 +21,7 @@ int SDL_SetPixelFormatPalette(SDL_PixelFormat* format,
 |}
 
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
