--- a/SDL_SetClipboardText.mediawiki
+++ b/SDL_SetClipboardText.mediawiki
@@ -17,7 +17,7 @@ int SDL_SetClipboardText(const char* text)
 |}
 
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
