--- a/SDL_GetWindowPixelFormat.mediawiki
+++ b/SDL_GetWindowPixelFormat.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_GetWindowPixelFormat =
 Use this function to get the pixel format associated with the window.
@@ -17,7 +17,7 @@ Uint32 SDL_GetWindowPixelFormat(SDL_Window* window)
 |}
 
 == Return Value ==
-Returns the pixel format of the window on success, or SDL_PIXELFORMAT_UNKNOWN on failure; call [[SDL_GetError]]() for more information.
+Returns the pixel format of the window on success or SDL_PIXELFORMAT_UNKNOWN on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
