--- a/SDL_GetWindowDisplayIndex.mediawiki
+++ b/SDL_GetWindowDisplayIndex.mediawiki
@@ -17,7 +17,7 @@ int SDL_GetWindowDisplay(SDL_Window* window)
 |}
 
 == Return Value ==
-Returns the index of the display containing the center of the window on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns the index of the display containing the center of the window on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
