--- a/SDL_GetRenderer.mediawiki
+++ b/SDL_GetRenderer.mediawiki
@@ -17,7 +17,7 @@ SDL_Renderer* SDL_GetRenderer(SDL_Window* window)
 |}
 
 == Return Value ==
-Returns the rendering context on success, or NULL on failure; call [[SDL_GetError]]() for more information.
+Returns the rendering context on success or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
