--- a/SDL_GetClipboardText.mediawiki
+++ b/SDL_GetClipboardText.mediawiki
@@ -11,7 +11,7 @@ char* SDL_GetClipboardText(void)
 ```
 
 == Return Value ==
-Returns the clipboard text on success, or NULL on failure; call [[SDL_GetError]]() for more information.
+Returns the clipboard text on success or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
