--- a/SDL_CreateColorCursor.mediawiki
+++ b/SDL_CreateColorCursor.mediawiki
@@ -25,7 +25,7 @@ SDL_Cursor* SDL_CreateColorCursor(SDL_Surface* surface,
 |}
 
 == Return Value ==
-Returns the new cursor on success, or NULL on failure; call [[SDL_GetError]]() for more information.
+Returns the new cursor on success or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
