--- a/SDL_RWFromMem.mediawiki
+++ b/SDL_RWFromMem.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
 = SDL_RWFromMem =
@@ -24,7 +24,7 @@ SDL_RWops* SDL_RWFromMem(void* mem,
 <<Color2(green,Is '''mem''' an exception to the 'pointer rule'?)>>
 
 == Return Value ==
-A pointer to the SDL_RWops structure that is created, or NULL on failure.
+A pointer to the SDL_RWops structure that is created or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 *
