--- a/SDL_HapticOpenFromMouse.mediawiki
+++ b/SDL_HapticOpenFromMouse.mediawiki
@@ -12,7 +12,7 @@ SDL_Haptic* SDL_HapticOpenFromMouse(void)
 ```
 
 == Return Value ==
-Returns the haptic device identifier or NULL on failure.
+Returns the haptic device identifier or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
