--- a/SDL_HapticOpen.mediawiki
+++ b/SDL_HapticOpen.mediawiki
@@ -18,7 +18,7 @@ SDL_Haptic* SDL_HapticOpen(int device_index)
 |}
 
 == Return Value ==
-Returns the device identifier or NULL on failure.
+Returns the device identifier or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
