--- a/SDL_HapticName.mediawiki
+++ b/SDL_HapticName.mediawiki
@@ -18,7 +18,7 @@ const char* SDL_HapticName(int device_index)
 |}
 
 == Return Value ==
-Returns the name of the device or NULL on failure.
+Returns the name of the device or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
