--- a/SDL_AllocRW.mediawiki
+++ b/SDL_AllocRW.mediawiki
@@ -12,7 +12,7 @@ SDL_RWops* SDL_AllocRW(void)
 ```
 
 == Return Value ==
-*Returns a pointer to ,,the allocated memory on success,, ^a data stream^, or NULL on failure. *
+*Returns a pointer to ,,the allocated memory on success,, ^a data stream^, or NULL on failure*; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 *<br/>
