--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -344,9 +344,8 @@ Otherwise, the basic format is as follows:
 === Return Value ===
 The Return Value section provides basic information about what, if anything, a function will return upon success or failure.  
 
-''<<Color2(red,Important!)>>''
 {|
-|<( |3 30%>''If'' the return value is __void__
+|<( |3 30%>''<<Color2(red,Important!)>>''<br/>''If'' the return value is __void__
 |''Note'': This is '''not''' the same as __void*__!  See table below for void* return values.
 |-
 |''Action'': Delete the entire Return Value section, including the header.
@@ -500,19 +499,19 @@ Please see the [http://wiki.libsdl.org/moin.cgi/SGRemarks Remarks] Style Guide f
 The Related Functions section provides a list of other functions specifically referenced by that function or otherwise ''closely'' related to it.
 * In general, a "Related Function" is one that is important to the __use__ or __understanding__ of the given function.
 
+This list __should__ include:
+* the opposite function in a function pair (ie: get/set, do/undo)
+* functions that represent close alternatives (ie: general and specific versions, singular and plural versions)
+* functions that are called by or otherwise very closely related to the actions of the primary function on the page
+
 This list __should not__ include:
 * the primary function on that page
 * every other function that might be considered "related" 
-: ~-An argument can usually be made for a "relationship" between large numbers of functions. Using all of them would make these lists less valuable.-~
+: ~-An argument can usually be made for a "relationship" between many functions. Including all of them would make these lists much less valuable.-~
 * all functions of similar type or action
 * all functions of a related category
 * functions that are indirectly related (ie: it might be common to use them together)
 * functions that do not have a page in the wiki (usually because they are not public functions)
-
-This list __should__ include:
-* the opposite function in a function pair (ie: get/set, do/undo)
-* functions that represent close alternatives (ie: general and specific versions, singular and plural versions)
-* functions that are called by or otherwise very closely related to the actions of that function
 
 ''Example'': The other member of a Get and Set or Open and Close pair should be listed here, but all other Window or all other Create functions should not.
 
@@ -534,7 +533,7 @@ The basic format for the Related Functions list is:
 |''Action'': This section may be removed entirely (including the heading) and added back at a later time if it becomes relevant.
 |}
 
-''Note'': Function pages do not include a "Related Structures" or "Related Enumerations" section as some of the other page types do.  If there are related structures or enumerations they are included in the body of the page as links (usually in the Remarks section).  If you feel it is critical that a distinct section for one of these groups is included on a specific function page please contact us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to discuss it.
+''Note'': Function pages do not include a "Related Structures" or "Related Enumerations" section as some of the other page types do.  If there are important related structures or enumerations they are to be included in the body of the page as links (usually in the Remarks section).  If you feel it is critical that a distinct section for one of these groups be included on a specific function page please contact us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to discuss it.
 
 <!-- #''Note'': You may find more broadly related functions listed by category via the Category links in the [[#footer|footer section]] or by relationship in a broader, functional sense (often cross-category) on the Function Groups page(s) <<Color2(green,''(still to be created)'')>>. -->
 
@@ -557,12 +556,14 @@ The Footer section consists of a horizontal rule followed by two links separated
 
 ''Action 1'': Do not edit the <code>CategoryAPI</code> link!  
 
-''Action 2'': The <code>CategoryHeader</code> link may be edited ''if'' the function has been relocated to another header (very rare) or if it still says ```[[CategoryHeader]]``` (as on a new page).
+''Action 2'': The <code>CategoryHeader</code> link may be edited ''if'' the page still says ```[[CategoryHeader]]``` (as on a new page) or ''if'' the function has been relocated to another header (very rare).
 
-''Markup'': Replace <code>CategoryHeader</code> with the appropriate category name from the table that follows, or contact us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to find out what category name to use.
+''<<Color2(red,Important!)>>'' There are a few exceptions to this rule (pages with a name that does not match their header file).  These have been determined by the SDL team.  Please do not change an existing page's category name simply because it does not match its header file.  If you are concerned that a name is incorrect please contact us using the Feedback form or by email at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to confirm the change first.  
+
+''Markup'': Replace <code>CategoryHeader</code> with the appropriate category name from the table that follows, or contact us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to find out what category name to use  if you are unsure or if the category appears to be missing.
 
 {|
-|<rowbgcolor="#EDEDED">''Header File Containing the Function''
+|<rowbgcolor="#EDEDED">''Header File Containing the Function*''
 |''Corresponding Category Name''
 |-
 |SDL.h
@@ -679,6 +680,9 @@ The Footer section consists of a horizontal rule followed by two links separated
 |-
 |SDL_video.h
 |CategoryVideo
+|-
+|
+|~-*Some exceptions exist.  See above.-~
 |}
 
 
