--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -512,18 +512,20 @@ This list __should not__ include:
 * all functions of a related category
 * functions that are indirectly related (ie: it might be common to use them together)
 * functions that do not have a page in the wiki (usually because they are not public functions)
+* non-functions (ie: do not include structures or enumerations in this list)
 
-''Example'': The other member of a Get and Set or Open and Close pair should be listed here, but all other Window or all other Create functions should not.
+''Note'': In most cases a Related Function reference should be reciprocal - if you include function B on the page for function A then function A should be included on the page for function B.
 
-The basic format for the Related Functions list is:
+''Markup'': Each function name should follow a single blank space and a period and should be enclosed in double brackets to create a [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink].
+: ''Note'': Do not include empty parentheses after the function names in this section.  They are all functions so it should be understood/unnecessary.
+
+: The basic format for the Related Functions list is:
 ```
 == Related Functions ==
  .[[SDL_FunctionName]]
  .[[SDL_FunctionName]]
 ```
 : ~-''Note'': The heading was included to more clearly illustrate the blank space before the period at the beginning of each list line.  Without this markup the format will not parse correctly.-~
-
-''Note'': Do not include the empty parentheses after the function names in this section.
 
 {|
 |<( 30%>''If'' there is __more than one function__ in the list
