--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -234,14 +234,31 @@ Otherwise, the basic format is as follows:
 |<( |3 30%>''If'' the description mentions __a structure that ''does not'' have a page__
 |''Action'': Use the plain English term to describe the structure (ie: SDL_Window == <code>the window</code>) and omit the hyperlink.
 |-
-|''Note'': Mention here does not necessarily indicate that a page does not exist.  Please check the current wiki before selecting this option for wording, as a page may have been created since this was written.
+|''Note'': Please check the current wiki before selecting this option for wording, as a page may have been created since this was written or since you last checked.
 |-
 |''Example'': [[SDL_RenderClear]]()
 |-
 |<( |2 30%>''If'' a description must refer to any other __page in the API__
 |''Action'': Create a [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink] to the page.
 |-
-|''If'' the page is for an __enumeration__ it is not necessary to describe it as an enumeration as above for structures.
+|''Note'': ''If'' the description mentions an __enumeration__ it is not necessary to describe it as an enumeration as above for structures, but do hyperlink if there is a page.
+|-
+|<( |2 30%>''If'' the parameter is __for internal use, deprecated, or read-only__
+|''Action'': Include the following, verbatim, in the first cell of the row between the starting table markup and the text:<br/>```<rowbgcolor="#808080">```
+|-
+|''Example'': ```
+|<rowbgcolor="#808080">'''param'''
+|description
+|```
+|-
+|<( |4 30%>''If'' __a parameter references another parameter__ on that same page
+|''Action'': Use '''[http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold]''' for the parameter name.
+|-
+|''Note'': This is a very rare occurrence.
+|-
+|''Note'': If the reference is to the parameter as a ''concept'' (ie: the window) rather than ''directly'' to the parameter itself (ie: window) do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
+|-
+|''Example'': [[SDL_EnclosePoints]]()
 |-
 |<( |3 30%>''If'' a description is referring to something that could be __any one of a group of similar items__ (ie: rectangles)
 |''Action'': Begin the description with <code>a/an</code>
@@ -256,15 +273,6 @@ Otherwise, the basic format is as follows:
 |''Example'': [[SDL_BlitScaled]]()
 |-
 |''Note'': We realize that this is a somewhat arbitrary distinction depending upon your perspective.  If you are unsure whether to use <code>a/an</code> or <code>the</code> it may be helpful to do a quick text search for other pages with the same or similar parameter and copy the format there.  Ultimately, though, it's not worth losing sleep over. ;) Just pick one.
-|-
-|<( |4 30%>''If'' __a parameter references another parameter__ on that same page
-|''Action'': Use '''[http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold]''' for the parameter name.
-|-
-|''Note'': This is a very rare occurrence.
-|-
-|''Note'': If the reference is to the parameter as a ''concept'' (ie: the window) rather than ''directly'' to the parameter itself (ie: window) do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
-|-
-|''Example'': [[SDL_EnclosePoints]]()
 |}
 
 ''Note'': It would only rarely be appropriate to use the exact same description of a common parameter every time that parameter appears in the API.  However, the same or very similar description can be used for many occurrences of the same parameter, enhancing consistency across pages.  The following table provides a list of these commonly used descriptions.
