update content - w/ Sam; remove draft

--- a/SDL_QuitRequested.mediawiki
+++ b/SDL_QuitRequested.mediawiki
@@ -1,15 +1,17 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_QuitRequested =
-Use this function to ^request/process a quit event ???^.
+Use this function to see whether an SLD_QUIT event is queued.
 
 
 == Syntax ==
 ```c++
-void SDL_QuitRequested(void)
+SDL_bool SDL_QuitRequested(void)
 ```
+
+== Return Value ==
+Returns SDL_TRUE if it is queued or SDL_FALSE otherwise.
 
 == Code Examples ==
 ```c++
@@ -17,9 +19,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-An SDL_QUIT event is generated when the user tries to close the application window.  If it is ignored or filtered out, the window will remain open.  If it is not ignored or filtered, it is queued normally and the window is allowed to close.  When the window is closed, screen updates will complete, but have no effect.
-
-[[SDL_Init]]() installs signal handlers for <code>SIGINT</code> (keyboard interrupt) and <code>SIGTERM</code> (system termination request), if handlers do not already exist that generate SDL_QUIT events as well.  There is no way to determine the cause of an SDL_QUIT event, but setting a signal handler in your application will override the default generation of quit events for that signal.
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_Quit]]
