--- a/Roadmap.mediawiki
+++ b/Roadmap.mediawiki
@@ -70,13 +70,13 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 
 === Complete ===
 * <<Color2(green, Sam: Add a way to dynamically register for custom event types)>>
+* <<Color2(green, Add a timeout parameter for [[SDL_WaitEvent]]() (http://lists.libsdl.org/pipermail/sdl-libsdl.org/2008-May/thread.html#65067))>>
 
 === Required ===
 * Sam: Add modifier state to key and button events
 
 === Wishlist ===
 * <<Color2(gray, Add a timestamp to events)>>
-* <<Color2(gray, Add a timeout parameter for [[SDL_WaitEvent]]() (http://lists.libsdl.org/pipermail/sdl-libsdl.org/2008-May/thread.html#65067))>>
 
 == Mouse Input ==
 
