--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -41,7 +41,9 @@ The Title section consists of the page heading and its markup:
 
  ```= SDL_FunctionName =``` 
 
-It should match the address of the page and the function described on the page.
+For function pages this is the name of the function being described on the page and should match the address of the page.
+
+''Example'': Page address ```http://wiki.libsdl.org/moin.cgi/SDL_CreateWindow``` should have matching title {{{SDL_CreateWindow}}} and describe the [[SDL_CreateWindow]]() function.
 
 If you believe a change is necessary please contact us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
@@ -73,7 +75,7 @@ All function descriptions begin with:
 |-
 |''Note'': This is a very rare occurrence.
 |-
-|''Note'': If the reference is to the parameter as a ''concept'' (ie: the window) rather than ''directly'' to the parameter itself (ie: window) do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
+|''Note'': If the reference is to the parameter as a ''concept'' (ie: the window to do something with) rather than ''directly'' to the parameter itself (ie: SDL_Function(window)) do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
 |}
 
 
@@ -120,22 +122,18 @@ returnType* SDL_FunctionName(type1  parameter1,
 * Ending semi-colon (;)
 
 ''Note'': __To be included__
-* A space between <code>returnType</code> and <code>SDL_FunctionName</code>
-* Commas at the end of each line if there is more than 1 parameter
-* The colorizing markup ```c++```
+* The code box and colorizing markup above and below the function syntax<br/><code>```</code>```c++```<br/><code>}}}</code>
+ * A single space between `returnType` and `SDL_FunctionName`
+ * Commas at the end of each line before the last if there is more than 1 parameter
+ * The parentheses enclosing the parameters
 
 ''Note'': Do not remove or alter the code box markup surrounding the function syntax.  The starting and ending markup must remain on separate lines above and below the rest of the content in order to generate the code box.
 
-{|
-|<( |3 30%>''If'' a function refers to a __callback function__
-|''Action'': Place any relevant info about the callback function in the [[#Remarks|Remarks]] section and place a link in the parameters section as described [[#parameters|below]].
-|-
-|''Note'': Callback functions do not get their own pages.
-|-
-|''Example'': [[SDL_AddEventWatch]](), [[SDL_AddTimer]]()
-|}
+||<( |3 30%>''If'' a function refers to a __callback function__||''Action'': Place any relevant info about the callback function in the [[#Remarks|Remarks]] section and place a link in the parameters section as described [[#parameters|below]].||
+||''Note'': Callback functions do not get their own pages.||
+||''Example'': [[SDL_AddEventWatch]](), [[SDL_AddTimer]]()||
 
-''Example'': ```{
+''Example'': {{{{
 {{{#!highlight cpp
 
            1 space      no space  spaces (as needed)
@@ -165,10 +163,14 @@ The Function Parameters section provides basic information about each parameter 
 |''Action'': Delete the entire Function Parameters section, including the header.
 |-
 |''Example'': [[SDL_AllocRW]]()
+|-
+|<30%>''If'' the function __has parameters__
+|''Action'': See the remainder of this section for details.
 |}
 
+''Markup'': Use [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Tables basic table markup] and enclose each parameter name in [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold] markup.
 
-Otherwise, the basic format is as follows:
+The basic format is as follows:
 
 ```
 ||'''parameter1'''||description||
@@ -180,8 +182,6 @@ Otherwise, the basic format is as follows:
 * The __second column__ contains a simple description of each parameter using some specific formatting conventions.
 : ''<<Color2(red,Important!)>>'' All descriptions begin with a ''lower case'' letter, end ''without'' a period, and are generally not complete sentences.
 * There are a few content-dependent conventions we have chosen for consistency across pages - see the tables below for details. 
-
-''Markup'': Use [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Tables basic table markup] and enclose each parameter name in [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold] markup.
 
 ''Example'': [[SDL_SetColorKey]]()
 
@@ -197,7 +197,7 @@ Otherwise, the basic format is as follows:
 |''Example'': [[SDL_PixelFormatEnumToMasks]]()
 |-
 |<( |4 30%>''If'' a __more detailed description__ is required to adequately explain a parameter
-|''Action 1'' : Appended the following, verbatim, to the end of the brief description<br/>```; see [[#Remarks|Remarks]] for details```
+|<span id="details"></span>''Action 1'' : Append the following, verbatim, to the end of the brief description<br/>```; see [[#Remarks|Remarks]] for details```
 |-
 |''Action 2'': Place the more detailed information in the [[#Remarks|Remarks]] section
 |-
@@ -208,9 +208,9 @@ Otherwise, the basic format is as follows:
 |<( |3 30%>''If'' the __Remarks section is large__
 |''Action 1'': Create an [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Anchors anchor] immediately before the additional comments you are adding to the Remarks section
 |-
-|''Action 2'': Modify the Remarks link in the parameter description (see ''Action 2'' above) to the following:<br/>```; see [[#anchorname|Remarks]] for details```<br/>where <code>anchorname</code> matches the name you chose for the anchor in ''Action 1''.
+|''Markup'': Use ```<span id="anchorname"></span>```, where <code>anchorname</code> is a name of your choosing, to create the anchor in the Remarks section. See [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Anchors Anchors] for details.
 |-
-|''Markup'': Use ```<span id="anchorname"></span>``` to create the anchor in the Remarks section. See [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Anchors Anchors] for details.
+|''Action 2'': Modify the Remarks link in the parameter description (see ''[[#details|Action 1]]'' in the previous ''If'') to the following:<br/>```; see [[#anchorname|Remarks]] for details```<br/>where <code>anchorname</code> matches the name you chose for the anchor in ''Action 1''.
 |-
 |<( |2 30%>''If'' __there is a pointer__ associated with the parameter
 |''Action'': Avoid mentioning pointers unless they are critical to understanding the parameter or there is little other way to describe it (ie: void*)
@@ -225,9 +225,9 @@ Otherwise, the basic format is as follows:
 |<( |4 30%>''If'' the description mentions __a structure that has a page__
 |''Action 1'': Use the following pattern to describe the parameter:<br/><code>the/an</code> ```[[SDL_StructureName]]``` <code>structure to <action></code> or <code>representing <some piece of information></code>
 |-
-|''Action 2'': Check the table below for structure-specific phrasing.
+|''Action 2'': Check the [[#specific|table below]] for structure-specific phrasing.
 |-
-|''Note'': Be sure to hyperlink the structure name as shown.
+|''Note'': Be sure to hyperlink the structure name as shown in ''Action 1''.
 |-
 |''Example'': [[SDL_UnionRect]]()
 |-
@@ -256,7 +256,7 @@ Otherwise, the basic format is as follows:
 |-
 |''Note'': This is a very rare occurrence.
 |-
-|''Note'': If the reference is to the parameter as a ''concept'' (ie: the window) rather than ''directly'' to the parameter itself (ie: window) do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
+|''Note'': If the reference is to the parameter as a ''concept'' (ie: the window to do something with) rather than ''directly'' to the parameter itself (ie: SDL_Function(window)) do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
 |-
 |''Example'': [[SDL_EnclosePoints]]()
 |-
@@ -279,6 +279,7 @@ Otherwise, the basic format is as follows:
 
 ''Action'': When choosing a description phrase for a parameter please check this list to see if any of these common descriptions is applicable, even if a minor modification is required.
 
+<span id="specific"></span>
 {|
 |
 |<bgcolor="#EDEDED">''Content-dependent formatting: Specific''
