--- a/SDL_RWFromFile.mediawiki
+++ b/SDL_RWFromFile.mediawiki
@@ -24,7 +24,7 @@ SDL_RWops* SDL_RWFromFile(const char* file,
 <<Color2(green,Are these exceptions to the 'pointer rule'?)>>
 
 == Return Value ==
-Returns a pointer to the SDL_RWops structure that is created, *or NULL on failure*.
+Returns a pointer to the SDL_RWops structure that is created, or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 *<br/>
