--- a/SDL_LoadObject.mediawiki
+++ b/SDL_LoadObject.mediawiki
@@ -18,7 +18,7 @@ void* SDL_LoadObject(const char* sofile)
 |}
 
 == Return Value ==
-Returns a pointer to the object handle or NULL if there was an error.
+Returns a pointer to the object handle or NULL if there was an error; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
