update content - add code example from Matthew (5/19)

--- a/SDL_CreateRenderer.mediawiki
+++ b/SDL_CreateRenderer.mediawiki
@@ -29,7 +29,42 @@ Returns a valid rendering context or NULL if there was an error; call [[SDL_GetE
 
 == Code Examples ==
 ```c++
-You can add your code example here
+#include <SDL/SDL.h>
+
+int main() {
+	SDL_Window *win = NULL;
+	SDL_Renderer *renderer = NULL;
+	SDL_Texture *bitmapTex = NULL;
+	SDL_Surface *bitmapSurface = NULL;
+	int posX = 100, posY = 100, width = 320, height = 240;
+
+	win = SDL_CreateWindow("Hello World", posX, posY, width, height, 0);
+
+	renderer = SDL_CreateRenderer(win, -1, SDL_RENDERER_ACCELERATED);
+
+	bitmapSurface = SDL_LoadBMP("img/hello.bmp");
+	bitmapTex = SDL_CreateTextureFromSurface(renderer, bitmapSurface);
+	SDL_FreeSurface(bitmapSurface);
+
+	while (1) {
+		SDL_Event e;
+		if (SDL_PollEvent(&e)) {
+			if (e.type == SDL_QUIT) {
+				break;
+			}	
+		}
+
+		SDL_RenderClear(renderer);
+		SDL_RenderCopy(renderer, bitmapTex, NULL, NULL);
+		SDL_RenderPresent(renderer);
+	}
+
+	SDL_DestroyTexture(bitmapTex);
+	SDL_DestroyRenderer(renderer);
+	SDL_DestroyWindow(win);
+
+	return 0;
+}
 ```
 
 == Remarks ==
